[tool.poetry]
name = "zibzidi"
version = "0.1"
description = "alien robot"
authors = ["isabellaMB1 <isabella.myersbennett@gmail.com>","Rowan Elsworth <rowanelsworth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
